ポートフォリオに必要な情報を追加

--- a/index.html
+++ b/index.html
@@ -7,5 +7,59 @@
   </head>
   <body>
     <h1>田中琉太</h1>
+    
+    <h2>About</h2>
+    <p>
+      こんにちは。田中琉太です。<br>
+      ゲームが好きです。これからプログラミングができるようになりたいです。
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>田中　琉太</li>
+      <li>福岡県</li>
+      <li>特になし</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <th>Engine, Frameworks</th>
+        <td>Node.js, Express など</td>
+      </tr>
+      <tr>
+        <th>Tool, MiddleWare</th>
+        <td>Github,Git, PostgreSQL など</td>
+      </tr>
+      <tr>
+        <th>資格・免許</th>
+        <td>特になし</td>
+      </tr>
+    </table>
+
+    <h3>Works</h3>
+    <p>アピールできる活動内容を書きましょう。</p>
+    <ul>
+      <li>
+        作った作品
+        <ul>
+        </ul>
+      </li>
+    </ul>
+
+    <h3>Contact</h3>
+    <p>連絡先や SNS のアカウントを書きましょう。</p>
+    <ul>
+      <li><a href="251zs00874@student.zen.ac.jp">Mail</a></li>
+    </ul>
+
+    <h3>History</h3>
+    <p>ZEN大学</p>
+    <table>
+      <tr>
+        <th>2025 年</th>
+        <td>ZEN大学</a> 入学</td>
+      </tr>
+    </table>
   </body>
 </html>
