ポートフォリオに必要な情報を追加

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <ul>
       <li>田中　琉太</li>
       <li>福岡県</li>
-      <li>特になし</li>
     </ul>
 
     <h3>Skills</h3>
@@ -33,12 +32,11 @@
       </tr>
       <tr>
         <th>資格・免許</th>
-        <td>特になし</td>
+        <td></td>
       </tr>
     </table>
 
     <h3>Works</h3>
-    <p>アピールできる活動内容を書きましょう。</p>
     <ul>
       <li>
         作った作品
@@ -48,9 +46,8 @@
     </ul>
 
     <h3>Contact</h3>
-    <p>連絡先や SNS のアカウントを書きましょう。</p>
     <ul>
-      <li><a href="251zs00874@student.zen.ac.jp">Mail</a></li>
+      <li>Gmail 251zs00874@student.zen.ac.jp</a></li>
     </ul>
 
     <h3>History</h3>
