--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </table>
 
     <h3>好きなゲーム</h3>
-    <img src="">
+    <img src="lol.jpg">
     
     <h3>好きな動画</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1cCeJEsRemo?si=vRdT7pIvu6taAwca" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
